Menambahkan section pendidikan di index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,24 @@
             <h1>Bhanu Handika</h1>
             <p>Information System Student</p>
         </section>
+        <section class="bg-white text-black">
+            <h1>Education</h1>
+            <br />
+            <div class="flex flex-col md:flex-row ">
+                <div>
+                    <h2>MTsN 1 Tangerang Selatan</h2>
+                    <p>2015 - 2017</p>
+                </div>
+                <div>
+                    <h2>SMK Bina Informatika</h2>
+                    <p>2017 - 2020</p>
+                </div>
+                <div>
+                    <h2>Universitas Pembangunan Jaya/h2>
+                    <p>2020 - Sekarang</p>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
