--- a/index.html
+++ b/index.html
@@ -34,6 +34,92 @@
                 </div>
             </div>
         </section>
+        <section>
+            <h1>Portfolio</h1>
+            <div class="flex flex-col md:flex-row ">
+                <div class="flex flex-col bg-stone-600 text-white">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
+                    <br />
+                    <h1>My Portofolio</h1>
+                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
+                </div>
+                <div class="flex flex-col bg-stone-600 text-white">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
+                    <br />
+                    <h1>My Portofolio</h1>
+                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
+                </div>
+                <div class="flex flex-col bg-stone-600 text-white">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
+                    <br />
+                    <h1>My Portofolio</h1>
+                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
+                </div>
+            </div>
+
+            <div class="flex flex-col md:flex-row ">
+                <div class="flex flex-col bg-stone-600 text-white">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
+                    <br />
+                    <h1>My Portofolio</h1>
+                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
+                </div>
+                <div class="flex flex-col bg-stone-600 text-white">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
+                    <br />
+                    <h1>My Portofolio</h1>
+                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
+                </div>
+                <div class="flex flex-col bg-stone-600 text-white">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
+                    <br />
+                    <h1>My Portofolio</h1>
+                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
+                </div>
+            </div>
+
+            <div class="flex flex-col md:flex-row ">
+                <div class="flex flex-col bg-stone-600 text-white">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
+                    <br />
+                    <h1>My Portofolio</h1>
+                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
+                </div>
+                <div class="flex flex-col bg-stone-600 text-white">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
+                    <br />
+                    <h1>My Portofolio</h1>
+                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
+                </div>
+                <div class="flex flex-col bg-stone-600 text-white">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
+                    <br />
+                    <h1>My Portofolio</h1>
+                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
+                </div>
+            </div>
+
+            <div class="flex flex-col md:flex-row ">
+                <div class="flex flex-col bg-stone-600 text-white">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
+                    <br />
+                    <h1>My Portofolio</h1>
+                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
+                </div>
+                <div class="flex flex-col bg-stone-600 text-white">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
+                    <br />
+                    <h1>My Portofolio</h1>
+                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
+                </div>
+                <div class="flex flex-col bg-stone-600 text-white">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
+                    <br />
+                    <h1>My Portofolio</h1>
+                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
