Finishing semua section

--- a/index.html
+++ b/index.html
@@ -7,116 +7,115 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Final Project</title>
 </head>
-<body class="bg-slate-500">
-    <!-- <div> -->
-        <!-- <img src="img/Sublime Light.jpg" alt="" class="bg-auto"> -->
-    <!-- </div> -->
-    <div class="flex flex-col mx-10 mt-10">
-        <section class="bg-purple-500 text-white">
-            <h1>Bhanu Handika</h1>
-            <p>Information System Student</p>
-        </section>
-        <section class="bg-white text-black">
-            <h1>Education</h1>
+<body class="bg-slate-400">
+    <div class="flex flex-col mx-16 my-16 bg-neutral-50 rounded-lg shadow-lg">
+        <section class="bg-purple-500 text-white rounded-t-lg px-7 py-7">
+            <h1 class="text-5xl font-bold">Hello, I'am Bhanu Handika</h1>
             <br />
-            <div class="flex flex-col md:flex-row ">
-                <div>
-                    <h2>MTsN 1 Tangerang Selatan</h2>
-                    <p>2015 - 2017</p>
+            <p class="text-xs">I'am an Information System Student right now</p>
+        </section>
+        <section class="bg-white text-black px-7 py-7">
+            <h1 class="text-2xl font-bold">Education</h1>
+            <br />
+            <div class="flex flex-col md:flex-row">
+                <div class="my-3 w-1/4 md: w-full">
+                    <h2 class="text-lg font-bold">MTsN 1 Tangerang Selatan</h2>
+                    <p class="text-lg">(2015 - 2017)</p>
                 </div>
-                <div>
-                    <h2>SMK Bina Informatika</h2>
-                    <p>2017 - 2020</p>
+                <div class="my-3 w-1/4 md: w-full">
+                    <h2 class="text-lg font-bold">SMK Bina Informatika</h2>
+                    <p class="text-lg">(2017 - 2020)</p>
                 </div>
-                <div>
-                    <h2>Universitas Pembangunan Jaya/h2>
-                    <p>2020 - Sekarang</p>
+                <div class="my-3 w-1/4 md: w-full">
+                    <h2 class="text-lg font-bold">Universitas Pembangunan Jaya</h2>
+                    <p class="text-lg">(2020 - Sekarang)</p>
                 </div>
             </div>
         </section>
-        <section>
-            <h1>Portfolio</h1>
-            <div class="flex flex-col md:flex-row ">
-                <div class="flex flex-col bg-stone-600 text-white">
-                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
+        <section class="bg-white text-black px-7 py-7">
+            <h1 class="text-2xl font-bold">Portfolio</h1>
+            <br />
+            <div class="flex flex-col md:flex-row justify-between gap-8 mb-8">
+                <div class="flex flex-col bg-stone-600 text-white rounded-lg shadow-lg my-3">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image" class="rounded-t-lg">
                     <br />
-                    <h1>My Portofolio</h1>
-                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
+                    <h1 class="text-lg font-bold mx-4 mt-2">My Portofolio</h1>
+                    <h2 class="text-lg mx-4 mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
                 </div>
-                <div class="flex flex-col bg-stone-600 text-white">
-                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
+                <div class="flex flex-col bg-stone-600 text-white rounded-lg shadow-lg my-3">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image" class="rounded-t-lg">
                     <br />
-                    <h1>My Portofolio</h1>
-                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
+                    <h1 class="text-lg font-bold mx-4 mt-2">My Portofolio</h1>
+                    <h2 class="text-lg mx-4 mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
                 </div>
-                <div class="flex flex-col bg-stone-600 text-white">
-                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
+                <div class="flex flex-col bg-stone-600 text-white rounded-lg shadow-lg my-3">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image" class="rounded-t-lg">
                     <br />
-                    <h1>My Portofolio</h1>
-                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
-                </div>
-            </div>
-
-            <div class="flex flex-col md:flex-row ">
-                <div class="flex flex-col bg-stone-600 text-white">
-                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
-                    <br />
-                    <h1>My Portofolio</h1>
-                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
-                </div>
-                <div class="flex flex-col bg-stone-600 text-white">
-                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
-                    <br />
-                    <h1>My Portofolio</h1>
-                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
-                </div>
-                <div class="flex flex-col bg-stone-600 text-white">
-                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
-                    <br />
-                    <h1>My Portofolio</h1>
-                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
+                    <h1 class="text-lg font-bold mx-4 mt-2">My Portofolio</h1>
+                    <h2 class="text-lg mx-4 mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
                 </div>
             </div>
 
-            <div class="flex flex-col md:flex-row ">
-                <div class="flex flex-col bg-stone-600 text-white">
-                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
+            <div class="flex flex-col md:flex-row justify-between gap-8 mb-8">
+                <div class="flex flex-col bg-stone-600 text-white rounded-lg shadow-lg my-3">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image" class="rounded-t-lg">
                     <br />
-                    <h1>My Portofolio</h1>
-                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
+                    <h1 class="text-lg font-bold mx-4 mt-2">My Portofolio</h1>
+                    <h2 class="text-lg mx-4 mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
                 </div>
-                <div class="flex flex-col bg-stone-600 text-white">
-                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
+                <div class="flex flex-col bg-stone-600 text-white rounded-lg shadow-lg my-3">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image" class="rounded-t-lg">
                     <br />
-                    <h1>My Portofolio</h1>
-                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
+                    <h1 class="text-lg font-bold mx-4 mt-2">My Portofolio</h1>
+                    <h2 class="text-lg mx-4 mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
                 </div>
-                <div class="flex flex-col bg-stone-600 text-white">
-                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
+                <div class="flex flex-col bg-stone-600 text-white rounded-lg shadow-lg my-3">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image" class="rounded-t-lg">
                     <br />
-                    <h1>My Portofolio</h1>
-                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
+                    <h1 class="text-lg font-bold mx-4 mt-2">My Portofolio</h1>
+                    <h2 class="text-lg mx-4 mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
                 </div>
             </div>
 
-            <div class="flex flex-col md:flex-row ">
-                <div class="flex flex-col bg-stone-600 text-white">
-                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
+            <div class="flex flex-col md:flex-row justify-between gap-8 mb-8">
+                <div class="flex flex-col bg-stone-600 text-white rounded-lg shadow-lg my-3">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image" class="rounded-t-lg">
                     <br />
-                    <h1>My Portofolio</h1>
-                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
+                    <h1 class="text-lg font-bold mx-4 mt-2">My Portofolio</h1>
+                    <h2 class="text-lg mx-4 mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
                 </div>
-                <div class="flex flex-col bg-stone-600 text-white">
-                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
+                <div class="flex flex-col bg-stone-600 text-white rounded-lg shadow-lg my-3">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image" class="rounded-t-lg">
                     <br />
-                    <h1>My Portofolio</h1>
-                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
+                    <h1 class="text-lg font-bold mx-4 mt-2">My Portofolio</h1>
+                    <h2 class="text-lg mx-4 mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
                 </div>
-                <div class="flex flex-col bg-stone-600 text-white">
-                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image">
+                <div class="flex flex-col bg-stone-600 text-white rounded-lg shadow-lg my-3">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image" class="rounded-t-lg">
                     <br />
-                    <h1>My Portofolio</h1>
-                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni, possimus, eligendi blanditiis.</h2>
+                    <h1 class="text-lg font-bold mx-4 mt-2">My Portofolio</h1>
+                    <h2 class="text-lg mx-4 mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
+                </div>
+            </div>
+
+            <div class="flex flex-col md:flex-row justify-between gap-8 mb-8">
+                <div class="flex flex-col bg-stone-600 text-white rounded-lg shadow-lg my-3">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image" class="rounded-t-lg">
+                    <br />
+                    <h1 class="text-lg font-bold mx-4 mt-2">My Portofolio</h1>
+                    <h2 class="text-lg mx-4 mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
+                </div>
+                <div class="flex flex-col bg-stone-600 text-white rounded-lg shadow-lg my-3">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image" class="rounded-t-lg">
+                    <br />
+                    <h1 class="text-lg font-bold mx-4 mt-2">My Portofolio</h1>
+                    <h2 class="text-lg mx-4 mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
+                </div>
+                <div class="flex flex-col bg-stone-600 text-white rounded-lg shadow-lg my-3">
+                    <img src="img/portofolio_dummy.PNG" alt="portofolio dummy image" class="rounded-t-lg">
+                    <br />
+                    <h1 class="text-lg font-bold mx-4 mt-2">My Portofolio</h1>
+                    <h2 class="text-lg mx-4 mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
                 </div>
             </div>
         </section>
